2005-02-16  Raja R Harinath  <rharinath@novell.com>

	Fix parts of #63202.
	* expression.cs (UnaryMutator.ResolveOperator): Remove redundant
	lookup of operator in base type.  Ensure that all checks happen
	when the operator resolves to an "op_..." method.

2005-02-15  Raja R Harinath  <rharinath@novell.com>

	Fix #71992.
	* namespace.cs (NamespaceEntry.LookupNamespaceOrType): Add
	'ignore_cs0104' parameter.  Pass it to ...
	(NamespaceEntry.Lookup): ... this.
	* decl.cs (DeclSpace.LookupType): Add 'ignore_cs0104' parameter.
	* ecore.cs (SimpleName.ResolveAsTypeStep): Update.
	(TypeLookupExpression.DoResolveAsTypeStep): Update.
	* expression.cs (MemberAccess.IdenticalNameAndTypeName):
	Update.  Request that cs0104 errors be ignored.
	(ComposedCast.ResolveAsTypeStep): Update.

2005-02-14  Raja R Harinath  <rharinath@novell.com>

	Fix #59209.
	* expression.cs (Invocation.BetterFunction): Remove support for
	comparing virtual functions and their overrides.
	(Invocation.IsOverride): New.
	(Invocation.OverloadResolve): Don't consider 'override' functions
	during candidate selection.  Store them in a lookaside list.
	If the selected method is a 'virtual' function, use the list to
	find any overrides that are closer to the LHS type.

2005-02-14  Marek Safar  <marek.safar@seznam.cz>

	* expression.cs (New.DoResolve): Add complex core type reduction.
	(New.Constantify): Converts complex core type syntax like 'new int ()'
	to simple constant.
	
2005-02-14  Raja R Harinath  <rharinath@novell.com>

	* decl.cs (EntryType.EntryType): New constructor to create an
	updated copy of a cache entry.
	(MemberCache.AddMethods): Use it.
	(MemberCache.ClearDeclaredOnly): Remove.
	(MemberCache.MemberCache): Update.

2005-02-11  Miguel de Icaza  <miguel@novell.com>

	* codegen.cs (EmitContext): Introduce the `MethodIsStatic'
	variable.  This one is represents the actual low-level declaration
	of the method, as opposed to the semantic level `IsStatic'.   
